# zedd

./: Cargo.toml
.pi/todos/: 37d4bcf1.md  58cfbcaf.md  a28ec443.md
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/settings/: default.json
crates/acp_thread/src/: mention.rs
crates/agent/src/: thread.rs  tool_permissions.rs
crates/agent_settings/src/: agent_settings.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_panel.rs  agent_ui.rs  conversation_view.rs  inline_assistant.rs  mention_set.rs  message_editor.rs  slash_command.rs  text_thread_editor.rs  text_thread_history.rs
crates/assistant_slash_commands/src/: delta_command.rs  selection_command.rs  streaming_example_command.rs  symbols_command.rs
crates/assistant_text_thread/src/: assistant_text_thread_tests.rs  context_server_command.rs  text_thread.rs  text_thread_store.rs
crates/docs_preprocessor/src/: main.rs
crates/edit_prediction/src/: edit_prediction.rs  edit_prediction_tests.rs
crates/edit_prediction_ui/: Cargo.toml
crates/edit_prediction_ui/src/: edit_prediction_button.rs  edit_prediction_ui.rs
crates/editor/src/: edit_prediction.rs  element.rs
crates/eval_cli/src/: headless.rs
crates/extension_host/src/: extension_host.rs
crates/extensions_ui/src/: extensions_ui.rs
crates/git_ui/src/: git_ui.rs
crates/icons/src/: icons.rs
crates/language_model/: Cargo.toml
crates/paths/src/: paths.rs
crates/sidebar/: Cargo.toml
crates/terminal_view/: Cargo.toml
docs/src/: git.md  remote-development.md  tasks.md
(+34 files in other folders)
