[package]
name = "edit_prediction_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/edit_prediction_ui.rs"
doctest = false

[dependencies]
anyhow.workspace = true
client.workspace = true
codestral.workspace = true
copilot.workspace = true
copilot_chat.workspace = true
copilot_ui.workspace = true
edit_prediction_types.workspace = true
edit_prediction.workspace = true
editor.workspace = true
fs.workspace = true
gpui.workspace = true
indoc.workspace = true
language.workspace = true
paths.workspace = true
project.workspace = true
regex.workspace = true
settings.workspace = true
telemetry.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[dev-dependencies]
copilot = { workspace = true, features = ["test-support"] }
editor = { workspace = true, features = ["test-support"] }
indoc.workspace = true
project = { workspace = true, features = ["test-support"] }
theme = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }


